results/print-ir/expected/failure/resolver/mismatched_ret.psy.out
Parsed OK
error: Return type does not match function signature.
  --> tests/failure/resolver/mismatched_ret.psy:2:5
   |
  2|     ret 10;
   |     ^--- Here


Semantic analysis failed. Compilation stopped.
